# X_o

./: CMakeLists.txt  X_o.cpp  head.h  iiii.sln  main.cpp
iiii/: Header.h  Player  Player.txt  Player.txtYou  iiii.vcxproj  iiii.vcxproj.filters
